nav and players section added

--- a/index.html
+++ b/index.html
@@ -4,9 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Leader board</title>
 </head>
 <body>
-    
+    <!-- header section -->
+    <header>
+<nav class="nav-area">
+    <div class="logo-area">
+        <img class="logo" src="./images/icons/logo.png" alt="logo">
+    </div>
+        <div class="menu-area">
+            <ul class="menu">
+                <li>home</li>
+                <li>About Us</li>
+                <li>Contuct</li>
+                <li>service</li>
+            </ul>
+        </div>
+</nav>
+    </header>
+
+    <!-- main section -->
+    <main>
+        <section>
+<div class="players-container">
+    <div class="players">
+        <img class="players-image" src="./images/players/player-1.png" alt="">
+        <h4>John Smith</h4>
+    </div>
+    <div class="players">
+        <img class="players-image" src="./images/players/player-2.png" alt="">
+        <h4>Pro Rasel</h4>
+    </div>
+    <div class="players">
+        <img class="players-image"src="./images/players/player-3.png" alt="">
+        <h4>Abu Sufian</h4>
+    </div>      
+    <div class="players">
+        <img class="players-image" src="./images/players/player-4.png" alt="">
+        <h4>Sajedul Karim</h4>
+    </div>
+    <div class="players">
+        <img class="players-image" src="./images/players/player-5.png" alt="">
+        <h4>Maruf Ahmed</h4>
+    </div>
+    <div class="players">
+        <img class="players-image" src="./images/players/player-6.png" alt="">
+        <h4>Mujahid</h4>
+    </div>
+</div>
+        </section>
+    </main>
 </body>
 </html>
