players section edided

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Leader board</title>
+    <style> @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:ital,wght@0,500;1,500&display=swap'); </style>
 </head>
 <body>
     <!-- header section -->
@@ -25,36 +26,37 @@
 </nav>
     </header>
 
-    <!-- main section -->
+    <!-- players section -->
     <main>
-        <section>
+        <section class="players-top">
 <div class="players-container">
     <div class="players">
-        <img class="players-image" src="./images/players/player-1.png" alt="">
+        <img class="players-image" src="./images/players/player-1.png" alt="players1">
         <h4>John Smith</h4>
     </div>
     <div class="players">
-        <img class="players-image" src="./images/players/player-2.png" alt="">
+        <img class="players-image" src="./images/players/player-2.png" alt="players2">
         <h4>Pro Rasel</h4>
     </div>
     <div class="players">
-        <img class="players-image"src="./images/players/player-3.png" alt="">
+        <img class="players-image"src="./images/players/player-3.png" alt="players3">
         <h4>Abu Sufian</h4>
     </div>      
     <div class="players">
-        <img class="players-image" src="./images/players/player-4.png" alt="">
+        <img class="players-image" src="./images/players/player-4.png" alt="players4">
         <h4>Sajedul Karim</h4>
     </div>
     <div class="players">
-        <img class="players-image" src="./images/players/player-5.png" alt="">
+        <img class="players-image" src="./images/players/player-5.png" alt="players5">
         <h4>Maruf Ahmed</h4>
     </div>
     <div class="players">
-        <img class="players-image" src="./images/players/player-6.png" alt="">
+        <img class="players-image" src="./images/players/player-6.png" alt="players6">
         <h4>Mujahid</h4>
     </div>
 </div>
         </section>
+        <!-- players section End -->
     </main>
 </body>
 </html>
