blog part added

--- a/index.html
+++ b/index.html
@@ -28,33 +28,81 @@
 
     <!-- players section -->
     <main>
-        <section class="players-top">
-<div class="players-container">
-    <div class="players">
-        <img class="players-image" src="./images/players/player-1.png" alt="players1">
-        <h4>John Smith</h4>
-    </div>
-    <div class="players">
-        <img class="players-image" src="./images/players/player-2.png" alt="players2">
-        <h4>Pro Rasel</h4>
-    </div>
-    <div class="players">
-        <img class="players-image"src="./images/players/player-3.png" alt="players3">
-        <h4>Abu Sufian</h4>
-    </div>      
-    <div class="players">
-        <img class="players-image" src="./images/players/player-4.png" alt="players4">
-        <h4>Sajedul Karim</h4>
-    </div>
-    <div class="players">
-        <img class="players-image" src="./images/players/player-5.png" alt="players5">
-        <h4>Maruf Ahmed</h4>
-    </div>
-    <div class="players">
-        <img class="players-image" src="./images/players/player-6.png" alt="players6">
-        <h4>Mujahid</h4>
-    </div>
-</div>
+        <section>
+            <!--   <div class="players-container"></div>
+             <h3 class = "players-name" class="players-title">Top Players</h3>  -->
+         <div class="players-container">
+
+            <h2 class="players-title">Top Players</h2>
+
+            <div class="players">
+
+            <div class="player">
+                <img class="players-image" src="./images/players/player-1.png" alt="players1">
+                <h3 class = "players-name">John Smith</h3>
+            </div>
+
+            <div class="player">
+                <img class="players-image" src="./images/players/player-2.png" alt="players2">
+                <h3 class = "players-name">Pro Rasel</h3>
+            </div>
+
+            <div class="player">
+                <img class="players-image"src="./images/players/player-3.png" alt="players3">
+                <h3 class = "players-name">Abu Sufian</h3>
+            </div> 
+
+            <div class="player">
+                <img class="players-image" src="./images/players/player-4.png" alt="players4">
+                <h3 class = "players-name">Sajedul Karim</h3>
+            </div>
+
+            <div class="player">
+                <img class="players-image" src="./images/players/player-5.png" alt="players5">
+                <h3 class = "players-name">Maruf Ahmed</h3>
+            </div>
+
+            <div class="player">
+                <img class="players-image" src="./images/players/player-6.png" alt="players6">
+                <h3 class = "players-name">Mujahid</h3>
+            </div>
+
+        </div>
+
+        </div>
+        <hr>
+        <div class="blog-container">
+            <div class="blogs">
+                <div class="blog">
+                    <img src="./images/blogs/blog-1.png" alt="">
+                        <h3>13 of My Favorite <br>UI/UX Goodies</h3>
+                        <p>By Danny Sapio</p>
+                    </img>
+                </div>
+                <div class="blog">
+                    <img src="./images/blogs/blog-2.png" alt="">
+                        <h3>UI cheat sheet: <br>
+                            list vs grids</h3>
+                        <p>By Tess Gadd</p>
+                    </img>
+                </div>
+                <div class="blog">
+                    <img src="./images/blogs/blog-3.png" alt="">
+                        <h3>7 typography tips <br>
+                            for interface design</h3>
+                        <p>By Jeremiah Lam</p>
+                    </img>
+                </div>
+                <div class="blog">
+                    <img src="./images/blogs/blog-4.png" alt="">
+                        <h3>Your logo is <br>
+                            copied</h3>
+                        <p>By Ferdinand Vogler</p>
+                    </img>
+                </div>
+               
+            </div>
+        </div>
         </section>
         <!-- players section End -->
     </main>
