latest course section addeda

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Leader board</title>
+    <script src="https://kit.fontawesome.com/cf28bfb667.js" crossorigin="anonymous"></script>
     <style> @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:ital,wght@0,500;1,500&display=swap'); </style>
 </head>
 <body>
@@ -118,6 +119,75 @@
         </div>
         </section>
         <!-- Blog part End -->
+        <section>
+            
+            <div class="lates-container">
+
+                <h3 class="latest-title">Latest Course</h3>
+
+                <div class="latest-course">
+                    <div class="course">
+                        <img class="course-img" src="./images/courses/course-1.png" alt="React">
+                        <h3 class="course-title">React - The Complete </h3>
+                        <h3 class="course-title">Guide 2020</h3>
+                        <p class="course-desc">Reed Krakoff.</p>
+                        <div class="icon">
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <p class="rating-para">4.5</p>
+                            <div class="clock">
+                                <i class="fa-regular fa-clock"></i>
+                                <p class="rating-para">0.1:30 hr</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="course">
+                        <img class="course-img" src="./images/courses/course-2.png" alt="powerpoint">
+                        <h3 class="course-title">Powerpoint 2020  </h3>
+                        <h3 class="course-title">Master Powerpoint Cour</h3>
+                        <p class="course-desc">Walter Scott</p>
+                        <div class="icon">
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <p class="rating-para">4.5</p>
+                            <div class="clock">
+                                <i class="fa-regular fa-clock"></i>
+                                <p class="rating-para">0.1:30 hr</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="course">
+                        <img class="course-img" src="./images/courses/course-3.png" alt="javascript">
+                        <h3 class="course-title">The Complete JavaScript </h3>
+                        <h3 class="course-title">Course 2020</h3>
+                        <p class="course-desc">Reed Krakoff.</p>
+                        <div class="icon">
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <p class="rating-para">4.5</p>
+                            <div class="clock">
+                                <i class="fa-regular fa-clock"></i>
+                                <p class="rating-para">0.1:30 hr</p>
+                            </div>
+                        </div>
+                    </div>
+  
+                    </div>
+                                </div>
+                </div>
+             
+
+
+        </section>
     </main>
 </body>
 </html>
